include/operators.h

ORTKI_API(ortki::OrtKITensor *) ortki_Abs(ortki::OrtKITensor * X);
ORTKI_API(ortki::OrtKITensor *) ortki_Acos(ortki::OrtKITensor * input);
ORTKI_API(ortki::OrtKITensor *) ortki_Acosh(ortki::OrtKITensor * input);
ORTKI_API(ortki::OrtKITensor *) ortki_Add(ortki::OrtKITensor * A, ortki::OrtKITensor * B);
ORTKI_API(ortki::OrtKITensor *) ortki_And(ortki::OrtKITensor * A, ortki::OrtKITensor * B);
ORTKI_API(ortki::OrtKITensor *) ortki_ArgMax(ortki::OrtKITensor * data, long axis, long keepdims, long select_last_index);
ORTKI_API(ortki::OrtKITensor *) ortki_ArgMin(ortki::OrtKITensor * data, long axis, long keepdims, long select_last_index);
ORTKI_API(ortki::OrtKITensor *) ortki_Asin(ortki::OrtKITensor * input);
ORTKI_API(ortki::OrtKITensor *) ortki_Asinh(ortki::OrtKITensor * input);
ORTKI_API(ortki::OrtKITensor *) ortki_Atan(ortki::OrtKITensor * input);
ORTKI_API(ortki::OrtKITensor *) ortki_Atanh(ortki::OrtKITensor * input);
ORTKI_API(ortki::OrtKITensor *) ortki_AveragePool(ortki::OrtKITensor * X, const char* auto_pad, long ceil_mode, long count_include_pad, long* kernel_shape, int kernel_shape_size, long* pads, int pads_size, long* strides, int strides_size);
ORTKI_API(ortki::OrtKITensor *) ortki_BitShift(ortki::OrtKITensor * X, ortki::OrtKITensor * Y, const char* direction);
ORTKI_API(ortki::OrtKITensor *) ortki_Cast(ortki::OrtKITensor * input, long to);
ORTKI_API(ortki::OrtKITensor *) ortki_Ceil(ortki::OrtKITensor * X);
ORTKI_API(ortki::OrtKITensor *) ortki_Celu(ortki::OrtKITensor * X, float alpha);
ORTKI_API(ortki::OrtKITensor *) ortki_Clip(ortki::OrtKITensor * input, ortki::OrtKITensor * min, ortki::OrtKITensor * max);
ORTKI_API(ortki::OrtKITensor *) ortki_Compress(ortki::OrtKITensor * input, ortki::OrtKITensor * condition, long axis);
ORTKI_API(ortki::OrtKITensor *) ortki_Concat(ortki::OrtKITensor ** inputs, int input_size, long axis);
ORTKI_API(ortki::OrtKITensor *) ortki_ConcatFromSequence(ortki::OrtKITensor ** input_sequence, int input_size, long axis, long new_axis);
ORTKI_API(ortki::OrtKITensor *) ortki_Conv(ortki::OrtKITensor * X, ortki::OrtKITensor * W, ortki::OrtKITensor * B, const char* auto_pad, long* dilations, int dilations_size, long group, long* kernel_shape, int kernel_shape_size, long* pads, int pads_size, long* strides, int strides_size);
ORTKI_API(ortki::OrtKITensor *) ortki_ConvInteger(ortki::OrtKITensor * x, ortki::OrtKITensor * w, ortki::OrtKITensor * x_zero_point, ortki::OrtKITensor * w_zero_point, const char* auto_pad, long* dilations, int dilations_size, long group, long* kernel_shape, int kernel_shape_size, long* pads, int pads_size, long* strides, int strides_size);
ORTKI_API(ortki::OrtKITensor *) ortki_ConvTranspose(ortki::OrtKITensor * X, ortki::OrtKITensor * W, ortki::OrtKITensor * B, const char* auto_pad, long* dilations, int dilations_size, long group, long* kernel_shape, int kernel_shape_size, long* output_padding, int output_padding_size, long* output_shape, int output_shape_size, long* pads, int pads_size, long* strides, int strides_size);
ORTKI_API(ortki::OrtKITensor *) ortki_Cos(ortki::OrtKITensor * input);
ORTKI_API(ortki::OrtKITensor *) ortki_Cosh(ortki::OrtKITensor * input);
ORTKI_API(ortki::OrtKITensor *) ortki_CumSum(ortki::OrtKITensor * x, ortki::OrtKITensor * axis, long exclusive, long reverse);
ORTKI_API(ortki::OrtKITensor *) ortki_DepthToSpace(ortki::OrtKITensor * input, long blocksize, const char* mode);
ORTKI_API(ortki::OrtKITensor *) ortki_DequantizeLinear(ortki::OrtKITensor * x, ortki::OrtKITensor * x_scale, ortki::OrtKITensor * x_zero_point, long axis);
ORTKI_API(ortki::OrtKITensor *) ortki_Det(ortki::OrtKITensor * X);
ORTKI_API(ortki::OrtKITensor *) ortki_Div(ortki::OrtKITensor * A, ortki::OrtKITensor * B);
ORTKI_API(ortki::OrtKITensorSeq *) ortki_Dropout(ortki::OrtKITensor * data, ortki::OrtKITensor * ratio, ortki::OrtKITensor * training_mode, long seed);
ORTKI_API(ortki::OrtKITensorSeq *) ortki_DynamicQuantizeLinear(ortki::OrtKITensor * x);
ORTKI_API(ortki::OrtKITensor *) ortki_Einsum(ortki::OrtKITensor ** Inputs, int input_size, const char* equation);
ORTKI_API(ortki::OrtKITensor *) ortki_Elu(ortki::OrtKITensor * X, float alpha);
ORTKI_API(ortki::OrtKITensor *) ortki_Equal(ortki::OrtKITensor * A, ortki::OrtKITensor * B);
ORTKI_API(ortki::OrtKITensor *) ortki_Erf(ortki::OrtKITensor * input);
ORTKI_API(ortki::OrtKITensor *) ortki_Exp(ortki::OrtKITensor * input);
ORTKI_API(ortki::OrtKITensor *) ortki_Expand(ortki::OrtKITensor * input, ortki::OrtKITensor * shape);
ORTKI_API(ortki::OrtKITensor *) ortki_EyeLike(ortki::OrtKITensor * input, long dtype, long k);
ORTKI_API(ortki::OrtKITensor *) ortki_Flatten(ortki::OrtKITensor * input, long axis);
ORTKI_API(ortki::OrtKITensor *) ortki_Floor(ortki::OrtKITensor * X);
ORTKI_API(ortki::OrtKITensorSeq *) ortki_GRU(ortki::OrtKITensor * X, ortki::OrtKITensor * W, ortki::OrtKITensor * R, ortki::OrtKITensor * B, ortki::OrtKITensor * sequence_lens, ortki::OrtKITensor * initial_h, float* activation_alpha, int activation_alpha_size, float* activation_beta, int activation_beta_size, const char** activations, int activations_size, float clip, const char* direction, long hidden_size, long layout, long linear_before_reset);
ORTKI_API(ortki::OrtKITensor *) ortki_Gather(ortki::OrtKITensor * data, ortki::OrtKITensor * indices, long axis);
ORTKI_API(ortki::OrtKITensor *) ortki_GatherElements(ortki::OrtKITensor * data, ortki::OrtKITensor * indices, long axis);
ORTKI_API(ortki::OrtKITensor *) ortki_GatherND(ortki::OrtKITensor * data, ortki::OrtKITensor * indices, long batch_dims);
ORTKI_API(ortki::OrtKITensor *) ortki_Gemm(ortki::OrtKITensor * A, ortki::OrtKITensor * B, ortki::OrtKITensor * C, float alpha, float beta, long transA, long transB);
ORTKI_API(ortki::OrtKITensor *) ortki_GlobalAveragePool(ortki::OrtKITensor * X);
ORTKI_API(ortki::OrtKITensor *) ortki_GlobalLpPool(ortki::OrtKITensor * X, long p);
ORTKI_API(ortki::OrtKITensor *) ortki_GlobalMaxPool(ortki::OrtKITensor * X);
ORTKI_API(ortki::OrtKITensor *) ortki_Greater(ortki::OrtKITensor * A, ortki::OrtKITensor * B);
ORTKI_API(ortki::OrtKITensor *) ortki_GreaterOrEqual(ortki::OrtKITensor * A, ortki::OrtKITensor * B);
ORTKI_API(ortki::OrtKITensor *) ortki_HardSigmoid(ortki::OrtKITensor * X, float alpha, float beta);
ORTKI_API(ortki::OrtKITensor *) ortki_HardSwish(ortki::OrtKITensor * X);
ORTKI_API(ortki::OrtKITensor *) ortki_Hardmax(ortki::OrtKITensor * input, long axis);
ORTKI_API(ortki::OrtKITensor *) ortki_Identity(ortki::OrtKITensor * input);
ORTKI_API(ortki::OrtKITensor *) ortki_InstanceNormalization(ortki::OrtKITensor * input, ortki::OrtKITensor * scale, ortki::OrtKITensor * B, float epsilon);
ORTKI_API(ortki::OrtKITensor *) ortki_IsInf(ortki::OrtKITensor * X, long detect_negative, long detect_positive);
ORTKI_API(ortki::OrtKITensor *) ortki_IsNaN(ortki::OrtKITensor * X);
ORTKI_API(ortki::OrtKITensor *) ortki_LRN(ortki::OrtKITensor * X, float alpha, float beta, float bias, long size);
ORTKI_API(ortki::OrtKITensorSeq *) ortki_LSTM(ortki::OrtKITensor * X, ortki::OrtKITensor * W, ortki::OrtKITensor * R, ortki::OrtKITensor * B, ortki::OrtKITensor * sequence_lens, ortki::OrtKITensor * initial_h, ortki::OrtKITensor * initial_c, ortki::OrtKITensor * P, float* activation_alpha, int activation_alpha_size, float* activation_beta, int activation_beta_size, const char** activations, int activations_size, float clip, const char* direction, long hidden_size, long input_forget, long layout);
ORTKI_API(ortki::OrtKITensor *) ortki_LeakyRelu(ortki::OrtKITensor * X, float alpha);
ORTKI_API(ortki::OrtKITensor *) ortki_Less(ortki::OrtKITensor * A, ortki::OrtKITensor * B);
ORTKI_API(ortki::OrtKITensor *) ortki_LessOrEqual(ortki::OrtKITensor * A, ortki::OrtKITensor * B);
ORTKI_API(ortki::OrtKITensor *) ortki_Log(ortki::OrtKITensor * input);
ORTKI_API(ortki::OrtKITensor *) ortki_LogSoftmax(ortki::OrtKITensor * input, long axis);
ORTKI_API(ortki::OrtKITensor *) ortki_LpNormalization(ortki::OrtKITensor * input, long axis, long p);
ORTKI_API(ortki::OrtKITensor *) ortki_LpPool(ortki::OrtKITensor * X, const char* auto_pad, long* kernel_shape, int kernel_shape_size, long p, long* pads, int pads_size, long* strides, int strides_size);
ORTKI_API(ortki::OrtKITensor *) ortki_MatMul(ortki::OrtKITensor * A, ortki::OrtKITensor * B);
ORTKI_API(ortki::OrtKITensor *) ortki_MatMulInteger(ortki::OrtKITensor * A, ortki::OrtKITensor * B, ortki::OrtKITensor * a_zero_point, ortki::OrtKITensor * b_zero_point);
ORTKI_API(ortki::OrtKITensor *) ortki_Max(ortki::OrtKITensor ** data_0, int input_size);
ORTKI_API(ortki::OrtKITensorSeq *) ortki_MaxPool(ortki::OrtKITensor * X, const char* auto_pad, long ceil_mode, long* dilations, int dilations_size, long* kernel_shape, int kernel_shape_size, long* pads, int pads_size, long storage_order, long* strides, int strides_size);
ORTKI_API(ortki::OrtKITensor *) ortki_MaxRoiPool(ortki::OrtKITensor * X, ortki::OrtKITensor * rois, long* pooled_shape, int pooled_shape_size, float spatial_scale);
ORTKI_API(ortki::OrtKITensor *) ortki_MaxUnpool(ortki::OrtKITensor * X, ortki::OrtKITensor * I, ortki::OrtKITensor * output_shape, long* kernel_shape, int kernel_shape_size, long* pads, int pads_size, long* strides, int strides_size);
ORTKI_API(ortki::OrtKITensor *) ortki_Mean(ortki::OrtKITensor ** data_0, int input_size);
ORTKI_API(ortki::OrtKITensor *) ortki_MeanVarianceNormalization(ortki::OrtKITensor * X, long* axes, int axes_size);
ORTKI_API(ortki::OrtKITensor *) ortki_Min(ortki::OrtKITensor ** data_0, int input_size);
ORTKI_API(ortki::OrtKITensor *) ortki_Mod(ortki::OrtKITensor * A, ortki::OrtKITensor * B, long fmod);
ORTKI_API(ortki::OrtKITensor *) ortki_Mul(ortki::OrtKITensor * A, ortki::OrtKITensor * B);
ORTKI_API(ortki::OrtKITensor *) ortki_Multinomial(ortki::OrtKITensor * input, long dtype, long sample_size, float seed);
ORTKI_API(ortki::OrtKITensor *) ortki_Neg(ortki::OrtKITensor * X);
ORTKI_API(ortki::OrtKITensor *) ortki_NegativeLogLikelihoodLoss(ortki::OrtKITensor * input, ortki::OrtKITensor * target, ortki::OrtKITensor * weight, long ignore_index, const char* reduction);
ORTKI_API(ortki::OrtKITensor *) ortki_NonMaxSuppression(ortki::OrtKITensor * boxes, ortki::OrtKITensor * scores, ortki::OrtKITensor * max_output_boxes_per_class, ortki::OrtKITensor * iou_threshold, ortki::OrtKITensor * score_threshold, long center_point_box);
ORTKI_API(ortki::OrtKITensor *) ortki_NonZero(ortki::OrtKITensor * X);
ORTKI_API(ortki::OrtKITensor *) ortki_Not(ortki::OrtKITensor * X);
ORTKI_API(ortki::OrtKITensor *) ortki_OneHot(ortki::OrtKITensor * indices, ortki::OrtKITensor * depth, ortki::OrtKITensor * values, long axis);
ORTKI_API(ortki::OrtKITensor *) ortki_Or(ortki::OrtKITensor * A, ortki::OrtKITensor * B);
ORTKI_API(ortki::OrtKITensor *) ortki_PRelu(ortki::OrtKITensor * X, ortki::OrtKITensor * slope);
ORTKI_API(ortki::OrtKITensor *) ortki_Pad(ortki::OrtKITensor * data, ortki::OrtKITensor * pads, ortki::OrtKITensor * constant_value, const char* mode);
ORTKI_API(ortki::OrtKITensor *) ortki_Pow(ortki::OrtKITensor * X, ortki::OrtKITensor * Y);
ORTKI_API(ortki::OrtKITensor *) ortki_QLinearConv(ortki::OrtKITensor * x, ortki::OrtKITensor * x_scale, ortki::OrtKITensor * x_zero_point, ortki::OrtKITensor * w, ortki::OrtKITensor * w_scale, ortki::OrtKITensor * w_zero_point, ortki::OrtKITensor * y_scale, ortki::OrtKITensor * y_zero_point, ortki::OrtKITensor * B, const char* auto_pad, long* dilations, int dilations_size, long group, long* kernel_shape, int kernel_shape_size, long* pads, int pads_size, long* strides, int strides_size);
ORTKI_API(ortki::OrtKITensor *) ortki_QLinearMatMul(ortki::OrtKITensor * a, ortki::OrtKITensor * a_scale, ortki::OrtKITensor * a_zero_point, ortki::OrtKITensor * b, ortki::OrtKITensor * b_scale, ortki::OrtKITensor * b_zero_point, ortki::OrtKITensor * y_scale, ortki::OrtKITensor * y_zero_point);
ORTKI_API(ortki::OrtKITensor *) ortki_QuantizeLinear(ortki::OrtKITensor * x, ortki::OrtKITensor * y_scale, ortki::OrtKITensor * y_zero_point, long axis);