CSharp/OrtKI/Operators.cs


public partial class OrtKI
{
//This file is automatically generated from the onnx def files via tools/gen_operators.py.
[DllImport("libortki.so")]
private static extern IntPtr ortki_Abs(IntPtr X);
[DllImport("libortki.so")]
private static extern IntPtr ortki_Acos(IntPtr input);
[DllImport("libortki.so")]
private static extern IntPtr ortki_Acosh(IntPtr input);
[DllImport("libortki.so")]
private static extern IntPtr ortki_Add(IntPtr A, IntPtr B);
[DllImport("libortki.so")]
private static extern IntPtr ortki_And(IntPtr A, IntPtr B);
[DllImport("libortki.so")]
private static extern IntPtr ortki_ArgMax(IntPtr data, long axis, long keepdims, long select_last_index);
[DllImport("libortki.so")]
private static extern IntPtr ortki_ArgMin(IntPtr data, long axis, long keepdims, long select_last_index);
[DllImport("libortki.so")]
private static extern IntPtr ortki_Asin(IntPtr input);
[DllImport("libortki.so")]
private static extern IntPtr ortki_Asinh(IntPtr input);
[DllImport("libortki.so")]
private static extern IntPtr ortki_Atan(IntPtr input);
[DllImport("libortki.so")]
private static extern IntPtr ortki_Atanh(IntPtr input);
[DllImport("libortki.so")]
private static extern IntPtr ortki_AveragePool(IntPtr X, String auto_pad, long ceil_mode, long count_include_pad, long[] kernel_shape, int kernel_shape_size, long[] pads, int pads_size, long[] strides, int strides_size);
[DllImport("libortki.so")]
private static extern IntPtr ortki_BitShift(IntPtr X, IntPtr Y, String direction);
[DllImport("libortki.so")]
private static extern IntPtr ortki_Cast(IntPtr input, long to);
[DllImport("libortki.so")]
private static extern IntPtr ortki_Ceil(IntPtr X);
[DllImport("libortki.so")]
private static extern IntPtr ortki_Celu(IntPtr X, float alpha);
[DllImport("libortki.so")]
private static extern IntPtr ortki_Clip(IntPtr input, IntPtr min, IntPtr max);
[DllImport("libortki.so")]
private static extern IntPtr ortki_Compress(IntPtr input, IntPtr condition, long axis);
[DllImport("libortki.so")]
private static extern IntPtr ortki_Concat(IntPtr[] inputs, int input_size, long axis);
[DllImport("libortki.so")]
private static extern IntPtr ortki_ConcatFromSequence(IntPtr[] input_sequence, int input_size, long axis, long new_axis);
[DllImport("libortki.so")]
private static extern IntPtr ortki_Conv(IntPtr X, IntPtr W, IntPtr B, String auto_pad, long[] dilations, int dilations_size, long group, long[] kernel_shape, int kernel_shape_size, long[] pads, int pads_size, long[] strides, int strides_size);
[DllImport("libortki.so")]
private static extern IntPtr ortki_ConvInteger(IntPtr x, IntPtr w, IntPtr x_zero_point, IntPtr w_zero_point, String auto_pad, long[] dilations, int dilations_size, long group, long[] kernel_shape, int kernel_shape_size, long[] pads, int pads_size, long[] strides, int strides_size);
[DllImport("libortki.so")]
private static extern IntPtr ortki_ConvTranspose(IntPtr X, IntPtr W, IntPtr B, String auto_pad, long[] dilations, int dilations_size, long group, long[] kernel_shape, int kernel_shape_size, long[] output_padding, int output_padding_size, long[] output_shape, int output_shape_size, long[] pads, int pads_size, long[] strides, int strides_size);
[DllImport("libortki.so")]
private static extern IntPtr ortki_Cos(IntPtr input);
[DllImport("libortki.so")]
private static extern IntPtr ortki_Cosh(IntPtr input);
[DllImport("libortki.so")]
private static extern IntPtr ortki_CumSum(IntPtr x, IntPtr axis, long exclusive, long reverse);
[DllImport("libortki.so")]
private static extern IntPtr ortki_DepthToSpace(IntPtr input, long blocksize, String mode);
[DllImport("libortki.so")]
private static extern IntPtr ortki_DequantizeLinear(IntPtr x, IntPtr x_scale, IntPtr x_zero_point, long axis);
[DllImport("libortki.so")]
private static extern IntPtr ortki_Det(IntPtr X);
[DllImport("libortki.so")]
private static extern IntPtr ortki_Div(IntPtr A, IntPtr B);
[DllImport("libortki.so")]
private static extern IntPtr ortki_Dropout(IntPtr data, IntPtr ratio, IntPtr training_mode, long seed);
[DllImport("libortki.so")]
private static extern IntPtr ortki_DynamicQuantizeLinear(IntPtr x);
[DllImport("libortki.so")]
private static extern IntPtr ortki_Einsum(IntPtr[] Inputs, int input_size, String equation);
[DllImport("libortki.so")]
private static extern IntPtr ortki_Elu(IntPtr X, float alpha);
[DllImport("libortki.so")]
private static extern IntPtr ortki_Equal(IntPtr A, IntPtr B);
[DllImport("libortki.so")]
private static extern IntPtr ortki_Erf(IntPtr input);
[DllImport("libortki.so")]
private static extern IntPtr ortki_Exp(IntPtr input);
[DllImport("libortki.so")]
private static extern IntPtr ortki_Expand(IntPtr input, IntPtr shape);
[DllImport("libortki.so")]
private static extern IntPtr ortki_EyeLike(IntPtr input, long dtype, long k);
[DllImport("libortki.so")]
private static extern IntPtr ortki_Flatten(IntPtr input, long axis);
[DllImport("libortki.so")]
private static extern IntPtr ortki_Floor(IntPtr X);
[DllImport("libortki.so")]
private static extern IntPtr ortki_GRU(IntPtr X, IntPtr W, IntPtr R, IntPtr B, IntPtr sequence_lens, IntPtr initial_h, float[] activation_alpha, int activation_alpha_size, float[] activation_beta, int activation_beta_size, String[] activations, int activations_size, float clip, String direction, long hidden_size, long layout, long linear_before_reset);
[DllImport("libortki.so")]
private static extern IntPtr ortki_Gather(IntPtr data, IntPtr indices, long axis);
[DllImport("libortki.so")]
private static extern IntPtr ortki_GatherElements(IntPtr data, IntPtr indices, long axis);
[DllImport("libortki.so")]
private static extern IntPtr ortki_GatherND(IntPtr data, IntPtr indices, long batch_dims);
[DllImport("libortki.so")]
private static extern IntPtr ortki_Gemm(IntPtr A, IntPtr B, IntPtr C, float alpha, float beta, long transA, long transB);
[DllImport("libortki.so")]
private static extern IntPtr ortki_GlobalAveragePool(IntPtr X);
[DllImport("libortki.so")]
private static extern IntPtr ortki_GlobalLpPool(IntPtr X, long p);
[DllImport("libortki.so")]
private static extern IntPtr ortki_GlobalMaxPool(IntPtr X);
[DllImport("libortki.so")]
private static extern IntPtr ortki_Greater(IntPtr A, IntPtr B);
[DllImport("libortki.so")]
private static extern IntPtr ortki_GreaterOrEqual(IntPtr A, IntPtr B);
[DllImport("libortki.so")]
private static extern IntPtr ortki_HardSigmoid(IntPtr X, float alpha, float beta);
[DllImport("libortki.so")]
private static extern IntPtr ortki_HardSwish(IntPtr X);
[DllImport("libortki.so")]
private static extern IntPtr ortki_Hardmax(IntPtr input, long axis);
[DllImport("libortki.so")]
private static extern IntPtr ortki_Identity(IntPtr input);
[DllImport("libortki.so")]
private static extern IntPtr ortki_InstanceNormalization(IntPtr input, IntPtr scale, IntPtr B, float epsilon);
[DllImport("libortki.so")]
private static extern IntPtr ortki_IsInf(IntPtr X, long detect_negative, long detect_positive);
[DllImport("libortki.so")]
private static extern IntPtr ortki_IsNaN(IntPtr X);
[DllImport("libortki.so")]
private static extern IntPtr ortki_LRN(IntPtr X, float alpha, float beta, float bias, long size);
[DllImport("libortki.so")]
private static extern IntPtr ortki_LSTM(IntPtr X, IntPtr W, IntPtr R, IntPtr B, IntPtr sequence_lens, IntPtr initial_h, IntPtr initial_c, IntPtr P, float[] activation_alpha, int activation_alpha_size, float[] activation_beta, int activation_beta_size, String[] activations, int activations_size, float clip, String direction, long hidden_size, long input_forget, long layout);
[DllImport("libortki.so")]
private static extern IntPtr ortki_LeakyRelu(IntPtr X, float alpha);
[DllImport("libortki.so")]
private static extern IntPtr ortki_Less(IntPtr A, IntPtr B);
[DllImport("libortki.so")]
private static extern IntPtr ortki_LessOrEqual(IntPtr A, IntPtr B);
[DllImport("libortki.so")]
private static extern IntPtr ortki_Log(IntPtr input);
[DllImport("libortki.so")]
private static extern IntPtr ortki_LogSoftmax(IntPtr input, long axis);
[DllImport("libortki.so")]
private static extern IntPtr ortki_LpNormalization(IntPtr input, long axis, long p);
[DllImport("libortki.so")]
private static extern IntPtr ortki_LpPool(IntPtr X, String auto_pad, long[] kernel_shape, int kernel_shape_size, long p, long[] pads, int pads_size, long[] strides, int strides_size);
[DllImport("libortki.so")]
private static extern IntPtr ortki_MatMul(IntPtr A, IntPtr B);
[DllImport("libortki.so")]
private static extern IntPtr ortki_MatMulInteger(IntPtr A, IntPtr B, IntPtr a_zero_point, IntPtr b_zero_point);
[DllImport("libortki.so")]
private static extern IntPtr ortki_Max(IntPtr[] data_0, int input_size);
[DllImport("libortki.so")]
private static extern IntPtr ortki_MaxPool(IntPtr X, String auto_pad, long ceil_mode, long[] dilations, int dilations_size, long[] kernel_shape, int kernel_shape_size, long[] pads, int pads_size, long storage_order, long[] strides, int strides_size);
[DllImport("libortki.so")]
private static extern IntPtr ortki_MaxRoiPool(IntPtr X, IntPtr rois, long[] pooled_shape, int pooled_shape_size, float spatial_scale);
[DllImport("libortki.so")]
private static extern IntPtr ortki_MaxUnpool(IntPtr X, IntPtr I, IntPtr output_shape, long[] kernel_shape, int kernel_shape_size, long[] pads, int pads_size, long[] strides, int strides_size);
[DllImport("libortki.so")]
private static extern IntPtr ortki_Mean(IntPtr[] data_0, int input_size);
[DllImport("libortki.so")]
private static extern IntPtr ortki_MeanVarianceNormalization(IntPtr X, long[] axes, int axes_size);
[DllImport("libortki.so")]
private static extern IntPtr ortki_Min(IntPtr[] data_0, int input_size);
[DllImport("libortki.so")]
private static extern IntPtr ortki_Mod(IntPtr A, IntPtr B, long fmod);
[DllImport("libortki.so")]
private static extern IntPtr ortki_Mul(IntPtr A, IntPtr B);
[DllImport("libortki.so")]
private static extern IntPtr ortki_Multinomial(IntPtr input, long dtype, long sample_size, float seed);
[DllImport("libortki.so")]
private static extern IntPtr ortki_Neg(IntPtr X);
[DllImport("libortki.so")]
private static extern IntPtr ortki_NegativeLogLikelihoodLoss(IntPtr input, IntPtr target, IntPtr weight, long ignore_index, String reduction);
[DllImport("libortki.so")]
private static extern IntPtr ortki_NonMaxSuppression(IntPtr boxes, IntPtr scores, IntPtr max_output_boxes_per_class, IntPtr iou_threshold, IntPtr score_threshold, long center_point_box);
[DllImport("libortki.so")]
private static extern IntPtr ortki_NonZero(IntPtr X);
[DllImport("libortki.so")]
private static extern IntPtr ortki_Not(IntPtr X);
[DllImport("libortki.so")]
private static extern IntPtr ortki_OneHot(IntPtr indices, IntPtr depth, IntPtr values, long axis);
[DllImport("libortki.so")]
private static extern IntPtr ortki_Or(IntPtr A, IntPtr B);
[DllImport("libortki.so")]
private static extern IntPtr ortki_PRelu(IntPtr X, IntPtr slope);
[DllImport("libortki.so")]
private static extern IntPtr ortki_Pad(IntPtr data, IntPtr pads, IntPtr constant_value, String mode);
[DllImport("libortki.so")]
private static extern IntPtr ortki_Pow(IntPtr X, IntPtr Y);
[DllImport("libortki.so")]
private static extern IntPtr ortki_QLinearConv(IntPtr x, IntPtr x_scale, IntPtr x_zero_point, IntPtr w, IntPtr w_scale, IntPtr w_zero_point, IntPtr y_scale, IntPtr y_zero_point, IntPtr B, String auto_pad, long[] dilations, int dilations_size, long group, long[] kernel_shape, int kernel_shape_size, long[] pads, int pads_size, long[] strides, int strides_size);
[DllImport("libortki.so")]
private static extern IntPtr ortki_QLinearMatMul(IntPtr a, IntPtr a_scale, IntPtr a_zero_point, IntPtr b, IntPtr b_scale, IntPtr b_zero_point, IntPtr y_scale, IntPtr y_zero_point);
[DllImport("libortki.so")]
private static extern IntPtr ortki_QuantizeLinear(IntPtr x, IntPtr y_scale, IntPtr y_zero_point, long axis);
